--- a/.github/workflows/download-uptime-checks.yml
+++ b/.github/workflows/download-uptime-checks.yml
@@ -2,7 +2,6 @@ name: Weekly Download of Uptime Check Files
 
 on:
   schedule:
-    # This cron expression will trigger the action every Sunday at midnight UTC
     - cron: '0 0 * * SUN'
 
 jobs:
@@ -10,8 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout repository with full history
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Download JSON files to root directory
       run: |
@@ -19,7 +20,7 @@ jobs:
         curl -o ./alceawis.com.json https://alcea-wisteria.de/PHP//0demo/2025-08-04-UptimeCheck/alceawis.com.json
         curl -o ./alceawis.de.json https://alcea-wisteria.de/PHP//0demo/2025-08-04-UptimeCheck/alceawis.de.json
 
-    - name: Commit downloaded files to the repository
+    - name: Commit and push changes
       run: |
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
@@ -28,5 +29,6 @@ jobs:
           echo "No changes to commit"
         else
           git commit -m "Weekly download of uptime check JSON files"
-          git push
+          git pull --rebase origin main
+          git push origin main
         fi
